pkg/crate/libzt/src/include/ZeroTierSockets.h

/**
 * Address structure large enough to hold IPv4 and IPv6 addresses
 */
struct zts_sockaddr_storage {
    uint8_t s2_len;
    zts_sa_family_t ss_family;
    char s2_data1[2];
    uint32_t s2_data2[3];
    uint32_t s2_data3[3];
};
/**
 * The peer's trust hierarchy role
 */
typedef enum {
    /**
     * Ordinary node
     */
    ZTS_PEER_ROLE_LEAF = 0,
    /**
     * Moon root
     */
    ZTS_PEER_ROLE_MOON = 1,
    /**
     * Planetary root
     */
    ZTS_PEER_ROLE_PLANET = 2
} zts_peer_role_t;
/**
 * Physical network path to a peer
 */
typedef struct {
    /**
     * Address of endpoint
     */
    struct zts_sockaddr_storage address;

    /**
     * Time of last send in milliseconds or 0 for never
     */
    uint64_t last_tx;

    /**
     * Time of last receive in milliseconds or 0 for never
     */
    uint64_t last_rx;

    /**
     * Is this a trusted path? If so this will be its nonzero ID.
     */
    uint64_t trusted_path_id;

    /**
     * One-way latency
     */
    float latency;

    float unused_0;
    float unused_1;
    float unused_2;
    float unused_3;
    float unused_4;
    uint64_t unused_5;
    uint64_t unused_6;
    float unused_7;

    /**
     * Name of physical interface (for monitoring)
     */
    char* ifname;

    /**
     * Is path expired?
     */
    int expired;

    /**
     * Is path preferred?
     */
    int preferred;
} zts_path_t;
/**
 * Peer status result buffer
 */
typedef struct {
    /**
     * ZeroTier address (40 bits)
     */
    uint64_t peer_id;

    /**
     * Remote major version or -1 if not known
     */
    int ver_major;

    /**
     * Remote minor version or -1 if not known
     */
    int ver_minor;

    /**
     * Remote revision or -1 if not known
     */
    int ver_rev;

    /**
     * Last measured latency in milliseconds or -1 if unknown
     */
    int latency;

    /**
     * What trust hierarchy role does this device have?
     */
    zts_peer_role_t role;

    /**
     * Number of paths (size of paths[])
     */
    unsigned int path_count;

    /**
     * Whether this peer was ever reachable via an aggregate link
     */
    int unused_0;

    /**
     * Known network paths to peer
     */
    zts_path_t paths[ZTS_MAX_PEER_NETWORK_PATHS];
} zts_peer_info_t;
/**
 * Structure used to specify a root topology (aka a world)
 */
typedef struct {
    char* public_id_str[ZTS_MAX_NUM_ROOTS];
    char* endpoint_ip_str[ZTS_MAX_NUM_ROOTS][ZTS_MAX_ENDPOINTS_PER_ROOT];
} zts_root_set_t;
/**
 * Structure used to convey information about a virtual network
 * interface (netif) to a user application.
 */
typedef struct {
    /**
     * The virtual network that this interface was created for
     */
    uint64_t net_id;

    /**
     * The hardware address assigned to this interface
     */
    uint64_t mac;

    /**
     * The MTU for this interface
     */
    int mtu;
} zts_netif_info_t;