pkg/crate/libzt/src/libzt.rs

#[test]
fn bindgen_test_layout_zts_path_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_path_t>(),
        120usize,
        concat!("Size of: ", stringify!(zts_path_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_path_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_path_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).address as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).last_tx as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(last_tx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).last_rx as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(last_rx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).trusted_path_id as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(trusted_path_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).latency as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(latency)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_0 as *const _ as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_0)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_1 as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_2 as *const _ as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_3 as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_3)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_4 as *const _ as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_4)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_5 as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_5)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_6 as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_6)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).unused_7 as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(unused_7)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).ifname as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(ifname)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).expired as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(expired)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_path_t>())).preferred as *const _ as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_path_t),
            "::",
            stringify!(preferred)
        )
    );
}
#[doc = " Peer status result buffer"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_peer_info_t {
    #[doc = " ZeroTier address (40 bits)"]
    pub peer_id: u64,
    #[doc = " Remote major version or -1 if not known"]
    pub ver_major: ::std::os::raw::c_int,
    #[doc = " Remote minor version or -1 if not known"]
    pub ver_minor: ::std::os::raw::c_int,
    #[doc = " Remote revision or -1 if not known"]
    pub ver_rev: ::std::os::raw::c_int,
    #[doc = " Last measured latency in milliseconds or -1 if unknown"]
    pub latency: ::std::os::raw::c_int,
    #[doc = " What trust hierarchy role does this device have?"]
    pub role: zts_peer_role_t,
    #[doc = " Number of paths (size of paths[])"]
    pub path_count: ::std::os::raw::c_uint,
    #[doc = " Whether this peer was ever reachable via an aggregate link"]
    pub unused_0: ::std::os::raw::c_int,
    #[doc = " Known network paths to peer"]
    pub paths: [zts_path_t; 16usize],
}
#[test]
fn bindgen_test_layout_zts_peer_info_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_peer_info_t>(),
        1960usize,
        concat!("Size of: ", stringify!(zts_peer_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_peer_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_peer_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).peer_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(peer_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).ver_major as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(ver_major)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).ver_minor as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(ver_minor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).ver_rev as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(ver_rev)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).latency as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(latency)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).role as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(role)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).path_count as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(path_count)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).unused_0 as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(unused_0)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_peer_info_t>())).paths as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_peer_info_t),
            "::",
            stringify!(paths)
        )
    );
}
#[doc = " Structure used to specify a root topology (aka a world)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_root_set_t {
    pub public_id_str: [*mut ::std::os::raw::c_char; 16usize],
    pub endpoint_ip_str: [[*mut ::std::os::raw::c_char; 32usize]; 16usize],
}
#[test]
fn bindgen_test_layout_zts_root_set_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_root_set_t>(),
        4224usize,
        concat!("Size of: ", stringify!(zts_root_set_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_root_set_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_root_set_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_root_set_t>())).public_id_str as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_root_set_t),
            "::",
            stringify!(public_id_str)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_root_set_t>())).endpoint_ip_str as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_root_set_t),
            "::",
            stringify!(endpoint_ip_str)
        )
    );
}
#[doc = " Structure used to convey information about a virtual network"]
#[doc = " interface (netif) to a user application."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_netif_info_t {
    #[doc = " The virtual network that this interface was created for"]
    pub net_id: u64,
    #[doc = " The hardware address assigned to this interface"]
    pub mac: u64,
    #[doc = " The MTU for this interface"]
    pub mtu: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_zts_netif_info_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_netif_info_t>(),
        24usize,
        concat!("Size of: ", stringify!(zts_netif_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_netif_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_netif_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_netif_info_t>())).net_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_netif_info_t),
            "::",
            stringify!(net_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_netif_info_t>())).mac as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_netif_info_t),
            "::",
            stringify!(mac)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_netif_info_t>())).mtu as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_netif_info_t),
            "::",
            stringify!(mtu)
        )
    );
}
